--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ font-size: 100%;
 font-weight: 100;
 }
 #header div {
-display: inline-block;
-transform: translateY(-50%);
+display: flex;
+align-items: center;
 }
 #header img {
 padding: 12px 24px
